HTML benchmarks